bk_ida/gccida/g0/known_cond
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/combine.c:7846:25: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  known_cond( rtx x, rtx_code cond, rtx reg, rtx val) 
                        ^
                        enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/combine.c:7851:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code conda; // [rsp+14h] [rbp-5Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/combine.c:7857:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inner_mode; // [rsp+4Ch] [rbp-24h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/combine.c:7860:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inner_mode_0; // [rsp+60h] [rbp-10h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/combine.c:7861:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+64h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/combine.c:7862:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code codea; // [rsp+64h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/combine.c:7872:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[*( ( unsigned __int8 *)x + 2)] != MODE_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/combine.c:7873:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[*( ( unsigned __int8 *)x + 2)] != MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/combine.c:7874:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[*( ( unsigned __int8 *)x + 2)] != MODE_VECTOR_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/combine.c:7875:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[*( ( unsigned __int8 *)val + 2)] != MODE_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/combine.c:7876:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[*( ( unsigned __int8 *)val + 2)] != MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/combine.c:7877:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[*( ( unsigned __int8 *)val + 2)] != MODE_VECTOR_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/combine.c:7890:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/combine.c:7892:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2)); 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/combine.c:7939:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
return ( rtx)x[1]; 
             ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/combine.c:7958:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
return ( rtx)x[1]; 
             ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/combine.c:7971:27: error: use of undeclared identifier 'machine_mode'
newa = simplify_subreg( ( machine_mode)*( ( unsigned __int8 *)x + 2), r, inner_mode, *( _DWORD *)&x[1]); 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/combine.c:8006:50: error: use of undeclared identifier 'machine_mode'
new_0 = simplify_unary_operation( ZERO_EXTEND, ( machine_mode)*( ( unsigned __int8 *)x + 2), r_0, inner_mode_0); 
                                                 ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/known_cond/src/obj/combine.o] Error 1
